finished styling from register view (mobile only)

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,9 +9,12 @@ $mainFont: cairo, sans-serif;
 
 
 /* MARGINS */
-$mainMarginBottom: 10px;
 $lowerMarginBottom: 5px;
+$mainMarginBottom: 10px;
+$bigMarginBottom: 15px;
 $biggerMarginBottom: 20px;
+$biggestMarginBottom: 30px;
+
 
 $headlineMarginBottom: 40px;
 
