--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -10,6 +10,8 @@
 
 @import './animation.scss';
 
+@import './form_content_card.scss';
+
 * {
     margin: 0;
     padding: 0;
@@ -25,7 +27,8 @@ p {
     // calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
     font-size: calc(20px + (25 - 20) * ((100vw - 200px) / (1600 - 300)));
     line-height: calc(1.5em + (2.5 - 1.5) * ((100vw - 100px)/(1600 - 300)));  
-    max-width: 23ch;
+    max-width: 25ch;
+    margin-bottom: $biggestMarginBottom;
 }
 
 h1 {
@@ -49,7 +52,13 @@ h3 {
 
 a {
     font-size: calc(20px + (25 - 20) * ((100vw - 200px) / (1600 - 300)));
-    line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300)));    
+    line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300)));   
+    color: $primaryColor; 
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline; 
+    }
 }
 
 .added_margin_bottom {
