--- a/src/assets/styles/forms.scss
+++ b/src/assets/styles/forms.scss
@@ -23,17 +23,23 @@ form {
     label {
         font-size: calc(20px + (25 - 20) * ((100vw - 200px) / (1600 - 300)));
         line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300)));  
+        // margin-bottom: $mainMarginBottom;
     }
 
     input[type="text"],
     input[type="email"],
+    input[type="password"],
     input[type="tel"] {
-        width: 80%;
+        width: 100%;
         border: 1px solid grey;
-        border-radius: 5px;
+        border-radius: 10px;
         height: 40px;
-        margin-bottom: 5px;
+        margin-bottom: $biggestMarginBottom;
     }
 
     margin-bottom: $biggerMarginBottom;
+
+    .label_hide_all_bookcovers {
+        margin-right: 10px;
+    }
 }
