Adaption view home (bg, book of the month) incl. Styling (mobile only)

--- a/src/assets/styles/animation.scss
+++ b/src/assets/styles/animation.scss
@@ -8,7 +8,7 @@
 .illustration_floating_girl {
     display: block;
     transform: translateX(-150px);
-    margin-bottom: $mainMarginBottom;
+    margin-bottom: $biggestMarginBottom;
 }
 
 .floating_illu  {
