--- a/src/assets/styles/forms.scss
+++ b/src/assets/styles/forms.scss
@@ -1,31 +1,20 @@
 form {
-    // .input {
-    //     background:rgba(255, 255, 255, 0.7);
-    //     width: 100%;
-    //     box-sizing: border-box;
-    //     padding: 8px 15px;
-    //     border-radius: 2px;
-    //     margin: 7px 0;
-    //     border: none;
-    // }
 
     .categoy  {
         width: 100%;
         border: 1px solid grey;
         border-radius: 10px;
-        height: 40px;
+        height: 45px;
         padding: 0 10px 0 10px;
         font-size: calc(18px + (20 - 18) * ((100vw - 200px) / (1600 - 300)));
         line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300))); 
         margin-bottom: $biggestMarginBottom;
-        // appearance: 10px;
-    }
-    
+        background-color: white;
+    }    
 
     label {
         font-size: calc(20px + (25 - 20) * ((100vw - 200px) / (1600 - 300)));
         line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300)));  
-        // margin-bottom: $mainMarginBottom;
     }
 
     input[type="text"],
@@ -37,6 +26,7 @@ form {
         border-radius: 10px;
         height: 40px;
         margin-bottom: $biggestMarginBottom;
+        margin-top: 5px;
     }
 
     textarea {
@@ -58,23 +48,23 @@ form {
 
     .find_friend {
         width: 100%;
+        background-color: white;
         border: 1px solid grey;
         border-radius: 10px;
-        height: 40px;
+        height: 45px;
         padding: 0 10px 0 10px;
         font-size: calc(18px + (20 - 18) * ((100vw - 200px) / (1600 - 300)));
         line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300))); 
         margin-bottom: $biggestMarginBottom;
     }
 
-    // .file_upload {
-    //     border: 1px solid #ccc;
-    //     display: inline-block;
-    //     padding: 6px 12px;
-    //     cursor: pointer;
-    // }
-
     input[type="file"] {
         margin-bottom: $biggestMarginBottom;
+        margin-top: 5px;
     }
+
+    textarea::placeholder {
+        color: #0bf;  
+    }
+
 }
