--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -77,12 +77,10 @@ a {
 }
 
 .comment_has_read_it {
-    // background-color: lightgrey;
     border-radius: 10px;
     height: auto;
     padding: 10px;
     margin-bottom: 10px;
-    // padding: 10px;
 
     p {
         margin-bottom: 0;
@@ -108,4 +106,21 @@ a {
 ::-webkit-scrollbar-thumb {
     background: $primaryColor;
     border-radius: 10px;
+}
+
+// PROFILE
+
+.wrapper_edit_profile {
+    display: flex;
+
+    svg {
+        width: 25px;
+        margin: 0 10px $headlineMarginBottom 0;
+        fill: $primaryColor;
+    }
+}
+
+.friends p {
+    text-align: center;
+    max-width: 100%;
 }
