--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -118,3 +118,37 @@ a {
     text-align: center;
     max-width: 100%;
 }
+
+// RESPONSIVE DESIGN
+
+@media (min-width: 600px){
+
+    h1 {
+        min-width: 20ch;
+    } 
+
+    .whole_content_wrapper {
+        padding: 0 50px 0 50px;
+    }  
+    
+    #nav {
+        padding-top: 40px;
+    }
+    
+}
+
+@media (min-width: 1000px){
+
+    h1 {
+        min-width: 20ch;
+    } 
+
+    .whole_content_wrapper {
+        padding: 0 100px 0 100px;
+    }  
+    
+    #nav {
+        padding-top: 40px;
+    }
+    
+}
