--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -33,7 +33,7 @@ p {
 }
 
 h1 {
-    font-size: calc(60px + (50 - 60) * ((100vw - 200px) / (1600 - 300)));
+    font-size: calc(60px + (100 - 60) * ((100vw - 200px) / (1600 - 300)));
     line-height: calc(1em + (1.5 - 1) * ((100vw - 100px)/(1600 - 300)));  
     margin-bottom: $headlineMarginBottom;
     max-width: 9ch;
@@ -45,10 +45,11 @@ h2 {
     margin-bottom: $headlineMarginBottom;
 }
 
+
 h3 {
     font-size: calc(25px + (25 - 25) * ((100vw - 200px) / (1600 - 300)));
     line-height: calc(1em + (2.5 - 1) * ((100vw - 100px)/(1600 - 300)));  
-    margin-bottom: $biggerMarginBottom;
+    margin-bottom: $mainMarginBottom;
 }
 
 a {
@@ -124,7 +125,7 @@ a {
 @media (min-width: 650px){
 
     h1 {
-        min-width: 20ch;
+        // min-width: 20ch;
     } 
 
     .whole_content_wrapper {
@@ -141,7 +142,7 @@ a {
     }
 
     p {
-        max-width: 35ch;
+        max-width: 45ch;
         margin-bottom: $biggestMarginBottom;
     } 
     
