--- a/src/assets/styles/forms.scss
+++ b/src/assets/styles/forms.scss
@@ -21,7 +21,7 @@ form {
     input[type="email"],
     input[type="password"],
     input[type="tel"] {
-        width: 100%;
+        // width: 100%;
         border: 1px solid grey;
         border-radius: 10px;
         height: 40px;
@@ -61,6 +61,14 @@ form {
     input[type="file"] {
         margin-bottom: $biggestMarginBottom;
         margin-top: 5px;
+    }
+
+    @media (min-width: 1000px) {
+
+        .categoy {
+            max-width: 500px;
+        }
+        
     }
 
 }
